The datasources can now be over ridden for a probe instance.